# SG3000Recomp

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md  THIRD_PARTY_NOTICES.md  sg1000_sg3000_master_system_base_tecnica.txt
.github/workflows/: ci.yml
cmake/: SG3000RecompConfig.cmake.in  zig-ar.cmd  zig-cxx-toolchain.cmake  zig-ranlib.cmd
config/: example.toml  profiles.example.txt
docs/: ARCHITECTURE.md  AUDIO.md  BUILDING.md  CHECKLIST.md  ENHANCED_PORT_ROADMAP.md  GAME_GEAR.md  GUI.md  INPUT_SCRIPT.md  PLAYABLE_STATUS.md  PORTABLE.md  PORTING_GUIDE.md  ROM_TESTING.md  Z80_STATUS.md
include/sgrecomp/: audio_latency.h  bus.h  cartridge.h  console.h  enhancements.h  game_library.h  game_profile.h  host_runtime.h  input_script.h  joypad.h  media_io.h  psg.h  recent_games.h  save_state.h  types.h  vdp.h  ym2413.h  ym2612.h  z80.h
src/host/: win32_host.cpp
src/runtime/: audio_latency.cpp  bus.cpp  cartridge.cpp  console.cpp  game_library.cpp  game_profile.cpp  host_runtime.cpp  input_script.cpp  joypad.cpp  media_io.cpp  psg.cpp  recent_games.cpp  save_state.cpp  vdp.cpp  ym2413.cpp  ym2612.cpp  z80.cpp
src/tools/: sgrecomp.cpp
templates/project/: CMakeLists.txt  main.cpp
tests/: recompiler_tool_smoke.cpp  z80_external_conformance.cpp  z80_external_vectors.inc  z80_smoke.cpp
tests/data/: SINGLE_STEP_TESTS_IMPORT.md
tools/: import_z80_conformance.py
